@@ -731,7 +731,7 @@ sub configure {
 	}
 	_auto_update_media($urpm, %options);
 
-	_pick_mirror_if_needed($urpm, $_, '') foreach non_ignored_media($urpm, $options{update});
+	_pick_mirror_if_needed($urpm, $_, '') foreach non_ignored_media($urpm);
 
     if (!$options{nodepslist}) {
 	parse_media($urpm, \%options);
@@ -750,7 +750,7 @@ sub _auto_update_media {
     $options{callback} = delete $options{download_callback};
 
     foreach (grep { _is_remote_virtual($_) || $urpm->{options}{'auto-update'} } 
-	       non_ignored_media($urpm, $options{update})) {
+	       non_ignored_media($urpm)) {
 	_update_medium($urpm, $_, %options);
     }
 }
@@ -770,7 +770,7 @@ sub all_media_to_update {
 sub parse_media {
     my ($urpm, $options) = @_;
 
-    foreach (non_ignored_media($urpm, $options->{update})) {
+    foreach (non_ignored_media($urpm)) {
 	delete @$_{qw(start end)};
 	_parse_synthesis_or_ignore($urpm, $_, $options->{callback});
 
@@ -2025,7 +2025,7 @@ sub update_media {
 	$_->{modified} ||= 1 foreach all_media_to_update($urpm);
     }
 
-    update_those_media($urpm, [ grep { $_->{modified} } non_ignored_media($urpm, $options{update}) ], %options);
+    update_those_media($urpm, [ grep { $_->{modified} } non_ignored_media($urpm) ], %options);
 }
 
 sub update_those_media {
